Closed Bug 370024 Opened 17 years ago Closed 17 years ago

Crash When Printing

Categories

(Core :: Printing: Output, defect)

PowerPC
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: cbarrett, Unassigned)

References

Details

Attachments

(1 file)

While debugging bug 368933, I discovered a crash when trying to print. Discovered on PPC/10.4.8 but should affect all Macs.

Patch forthcoming.
Attached patch fix v1.0Splinter Review
Thanks to stuart for help debugging this.
Attachment #254698 - Flags: superreview+
Attachment #254698 - Flags: review+
Was this ever checked in? I don't see any mention in Bonsai.
No. I don't have check-in rights, and stuart said his tree had a bunch of changes to those files already.
Whiteboard: [checkin needed]
Checking in mozilla/gfx/src/thebes/nsThebesDeviceContext.cpp;
/cvsroot/mozilla/gfx/src/thebes/nsThebesDeviceContext.cpp,v  <--  nsThebesDeviceContext.cpp
new revision: 1.50; previous revision: 1.49
done
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Whiteboard: [checkin needed]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: