Bug 370024 - Nullcheck mPrintingSurface in EndDocument to prevent crashing when printing p=cbarrett@mozilla.com (Colin Barrett) r+sr=pavlov@pavlov.net (Stuart Parmenter)